# docs/swagger.json
@@ -79,13 +79,63 @@
                 }
             }
         },
-        "/borrow": {
-            "post": {
-                "description": "BorrowBook borrows a book from store (loan period: 4 weeks) and returns the details of a loan",
+        "/hello": {
+            "get": {
+                "description": "testing api",
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "hello"
+                ],
+                "summary": "hello",
+                "responses": {
+                    "200": {
+                        "description": "Hello",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/loan": {
+            "get": {
+                "description": "GetAllLoans retrieves the detail of all loans",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "BorrowBook borrows a book from store",
+                "summary": "GetAllLoans fetches the loan details",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.LoanDetails"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/model.CustomError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.CustomError"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "LoanBook borrows a book from store (loan period: 4 weeks) and returns the details of a loan",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "LoanBook borrows a book from store",
                 "parameters": [
                     {
                         "description": "Loan Request",
@@ -125,7 +175,7 @@
                 }
             }
         },
-        "/extend/{id}": {
+        "/loan/extend/{id}": {
             "post": {
                 "description": "ExtendLoan extends the loan of a book",
                 "produces": [
@@ -163,27 +213,7 @@
                 }
             }
         },
-        "/hello": {
-            "get": {
-                "description": "testing api",
-                "produces": [
-                    "text/plain"
-                ],
-                "tags": [
-                    "hello"
-                ],
-                "summary": "hello",
-                "responses": {
-                    "200": {
-                        "description": "Hello",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/return/{id}": {
+        "/loan/return/{id}": {
             "post": {
                 "description": "ReturnBook returns the book",
                 "produces": [
